# bender

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  README.md  generate_autocomplete.py  pyproject.toml
.github/: copilot-instructions.md
bender/: __main__.py  converter.py  edit.py  editor.py  effect.py  effects.py  entity.py  modulation.py  parameter.py  processor.py  sound.py  transform.py  utils.py
bender/cli/: autocomplete.py  autocomplete_data.py  convert.py  edit.py  monitor.py  process.py  transform.py  utils.py
bender/converters/: array.py  bmp.py  qam.py  utils.py
bender/editors/: bloom.py  blur.py  dither.py  exposure.py  extract_channel.py  grain.py  split_channels.py  utils.py
bender/processors/: delay.py  distortion.py
bender/transforms/: array.py  bmp.py  qam.py  transform.py  utils.py
tests/: test_effects.py  test_modulation.py  test_parameter.py  test_sound.py
tests/converters/: test_image_conversion.py  test_rotate.py  test_utils.py
tests/editors/: test_bloom.py  test_blur.py  test_dither.py  test_exposure.py  test_extract_channel.py  test_grain.py  test_utils.py
tests/processors/: test_delay.py  test_distortion.py
tests/transforms/: test_utils.py
