[project]
name = "bender"
version = "0.1.1"
description = "Data bending toolkit"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "click>=8.1.8",
    "librosa>=0.10.2.post1",
    "numpy>=2.1.3",
    "pillow>=11.1.0",
    "soundfile>=0.13.1",
    "watchdog>=6.0.0",
]

[project.scripts]
bender = "bender:__main__.main"
